--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -1,6 +1,6 @@
 
 app-game, app-leader-board {
-	flex: 0 1 50%;
+	width: 50%;
 }
 
 .wrapper {
@@ -12,4 +12,39 @@ app-game, app-leader-board {
     align-items: stretch;
 	border: 3px solid #f5f5f5;
 	margin: 5vh auto 0;
+}
+
+
+@media (max-width: 1540px) {
+	.wrapper {
+		width: 96%;
+	}
+}
+
+
+@media (max-width: 1400px) {
+	app-game {
+		width: 60%
+	} 
+
+	app-leader-board {
+		width: 40%;
+	}
+}
+
+@media (max-width: 920px) { 
+	
+	app-game, app-leader-board {
+		width: 100%;
+	}
+	.wrapper {
+		flex-direction: column;
+	}
+}
+
+@media (max-width: 400px) { 
+	.wrapper {
+		margin-top: 0;
+		border: none;
+	}
 }
