--- a/src/app/components/game/game.component.scss
+++ b/src/app/components/game/game.component.scss
@@ -11,7 +11,7 @@
 	}
 
 	&-user, &-setting {
-		flex: 0 1 38%;
+		width: 38%;
 	}
 
 	&-user {
@@ -26,7 +26,7 @@
 	}
 
 	&-button {
-		flex:  0 1 18%;
+		width: 18%;
 		height: 50px;
 		background-color: #7b8d93;
 		color: #dee2e4;
@@ -85,9 +85,87 @@
 		&-red {
 			background-color: #e85a5f;
 		}
+
+		&-hard {
+			width: 40px;
+			height: 40px;
+		}
 	}
 
 	&-user::placeholder {
 		color: #9ba9ad;
+	}
+}
+
+
+@media (max-width: 1400px) {
+	.game {
+		padding: 60px 10px 15px;
+	}
+}
+
+@media (max-width: 1200px) { 
+	.game-square-hard {
+		width: 30px;
+		height: 30px;
+	}
+}
+
+@media (max-width: 920px) { 
+	.game {
+		border-right: 0;
+		border-bottom: 3px solid #f5f5f5;
+		padding: 30px 15px;
+
+		&-square-hard {
+			width: 40px;
+			height: 40px;
+		}
+
+		&-field {
+			margin-top: 20px;
+		}
+
+		&-title {
+			margin-top: 20px;
+		}
+	}
+}
+
+@media (max-width: 700px) { 
+	.game {
+		&-square-hard {
+			width: 30px;
+			height: 30px;
+		}
+	}
+}
+
+@media (max-width: 500px) { 
+	.game  {
+		&-square {
+			width: 30px;
+			height: 30px;
+			
+			&-hard {
+				width: 20px;
+				height: 20px;
+			}
+		}
+
+		&-header {
+			flex-direction: column;
+		}
+
+		&-user, &-setting, &-button {
+			width: 100%;
+			margin-top: 5px;
+		}
+	}		
+}
+
+@media (max-width: 400px) { 
+	.game {
+		padding: 20px 5px;
 	}
 }
