--- a/src/app/components/leader-board/leader-board.component.scss
+++ b/src/app/components/leader-board/leader-board.component.scss
@@ -12,7 +12,7 @@
 		display: flex;
 		width: 100%;
 		height: 60px;
-		font-size: 20px;
+		font-size: 18px;
 		justify-content: space-between;
 		background-color: #cfd8dc;
 		color: #9fa8ab;
@@ -21,10 +21,44 @@
 		padding: 0 20px;
 
 		span {
-		    max-width: 250px;
+		    max-width: 240px;
 		    text-overflow: ellipsis;
 		    white-space: nowrap;
 		    overflow: hidden;
 		}
+	}
+}
+
+
+@media (max-width: 1400px) {
+	.leader {
+		padding: 60px 20px 15px;
+	}
+}
+
+@media (max-width: 920px) { 
+	.leader {
+		padding: 30px 15px;
+		&-row {
+			font-size: 16px;
+		}
+	}
+}
+
+@media (max-width: 500px) { 
+	.leader {
+		&-title {
+			font-size: 20px;
+			padding-bottom: 20px;
+		}
+		&-row {
+			padding: 0 10px;
+		}
+	}
+}
+
+@media (max-width: 400px) { 
+	.leader {
+		padding: 20px 3px;
 	}
 }
